# Fisher_app

./: CMakeLists.txt  Fisher_app.cpp  README.md
INPUT/: dnn_abbas_config.yaml  qnn_abbas_config.yaml
Results/: DNN_eff_dim.eps  DNN_eig_dist.eps  EQM_eff_dim.eps  EQM_eig_dist.eps  QNN_eff_dim.eps  QNN_eig_dist.eps
gnuplot/: effectiveD.gnu  eig_distr.gnu
